--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,22 @@
-@import './base.css';
+:root {
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  background-color: #f5f5f5;
+  width: 100dvw;
+  height: 100dvh;
+  align-content: center;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
