--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,11 @@
   margin: 0;
 }
 
+html {
+  font-family: Roboto, Arial, sans-serif !important;
+  line-height: 1.4;
+}
+
 body {
   background-color: #f5f5f5;
   width: 100dvw;
